src/devices/libfdtLite/include/libfdt_internal.h

#define FDT_SW_MAGIC		(~FDT_MAGIC)
#define FDT_ASSUME_MASK 0