src/CBindings/libfdtLite.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[repr(C)]
#[derive(Default)]
pub struct __IncompleteArrayField<T>(::core::marker::PhantomData<T>, [T; 0]);
impl<T> __IncompleteArrayField<T> {
    #[inline]
    pub const fn new() -> Self {
        __IncompleteArrayField(::core::marker::PhantomData, [])
    }
    #[inline]
    pub fn as_ptr(&self) -> *const T {
        self as *const _ as *const T
    }
    #[inline]
    pub fn as_mut_ptr(&mut self) -> *mut T {
        self as *mut _ as *mut T
    }
    #[inline]
    pub unsafe fn as_slice(&self, len: usize) -> &[T] {
        ::core::slice::from_raw_parts(self.as_ptr(), len)
    }
    #[inline]
    pub unsafe fn as_mut_slice(&mut self, len: usize) -> &mut [T] {
        ::core::slice::from_raw_parts_mut(self.as_mut_ptr(), len)
    }
}
impl<T> ::core::fmt::Debug for __IncompleteArrayField<T> {
    fn fmt(&self, fmt: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        fmt.write_str("__IncompleteArrayField")
    }
}
pub const true_: u32 = 1;
pub const false_: u32 = 0;
pub const NULL: u32 = 0;
pub const INT8_MAX: u32 = 127;
pub const INT16_MAX: u32 = 32767;
pub const INT32_MAX: u32 = 2147483647;
pub const INT64_MAX: u64 = 9223372036854775807;
pub const UINT_MAX: u32 = 4294967295;
pub const INT_MAX: u32 = 2147483647;
pub const INT_MIN: i32 = -2147483648;
pub const SY: &[u8; 3] = b"sy\0";
pub const ST: &[u8; 3] = b"st\0";
pub const LD: &[u8; 3] = b"ld\0";
pub const MEM_PAGE_GRANULARITY: u32 = 14;
pub const MEM_PAGE_LEN: u32 = 16384;
pub const FDT_MAGIC: u32 = 3490578157;
pub const FDT_BEGIN_NODE: u32 = 1;
pub const FDT_END_NODE: u32 = 2;
pub const FDT_PROP: u32 = 3;
pub const FDT_NOP: u32 = 4;
pub const FDT_END: u32 = 9;
pub const FDT_FIRST_SUPPORTED_VERSION: u32 = 2;
pub const FDT_LAST_COMPATIBLE_VERSION: u32 = 16;
pub const FDT_LAST_SUPPORTED_VERSION: u32 = 17;
pub const FDT_ERR_NOTFOUND: u32 = 1;
pub const FDT_ERR_EXISTS: u32 = 2;
pub const FDT_ERR_NOSPACE: u32 = 3;
pub const FDT_ERR_BADOFFSET: u32 = 4;
pub const FDT_ERR_BADPATH: u32 = 5;
pub const FDT_ERR_BADPHANDLE: u32 = 6;
pub const FDT_ERR_BADSTATE: u32 = 7;
pub const FDT_ERR_TRUNCATED: u32 = 8;
pub const FDT_ERR_BADMAGIC: u32 = 9;
pub const FDT_ERR_BADVERSION: u32 = 10;
pub const FDT_ERR_BADSTRUCTURE: u32 = 11;
pub const FDT_ERR_BADLAYOUT: u32 = 12;
pub const FDT_ERR_INTERNAL: u32 = 13;
pub const FDT_ERR_BADNCELLS: u32 = 14;
pub const FDT_ERR_BADVALUE: u32 = 15;
pub const FDT_ERR_BADOVERLAY: u32 = 16;
pub const FDT_ERR_NOPHANDLES: u32 = 17;
pub const FDT_ERR_BADFLAGS: u32 = 18;
pub const FDT_ERR_ALIGNMENT: u32 = 19;
pub const FDT_ERR_MAX: u32 = 19;
pub const FDT_MAX_PHANDLE: u32 = 4294967294;
pub const FDT_MAX_NCELLS: u32 = 4;
pub const FDT_CREATE_FLAG_NO_NAME_DEDUP: u32 = 1;
pub const FDT_CREATE_FLAGS_ALL: u32 = 1;
pub const FDT_SW_MAGIC: i64 = -3490578158;
pub const FDT_ASSUME_MASK: u32 = 0;
pub type u8_ = core::ffi::c_uchar;
pub type u16_ = core::ffi::c_ushort;
pub type u32_ = core::ffi::c_uint;
pub type u64_ = core::ffi::c_ulonglong;
pub type i8_ = core::ffi::c_schar;
pub type i16_ = core::ffi::c_short;
pub type i32_ = core::ffi::c_int;
pub type i64_ = core::ffi::c_longlong;
pub type uintptr = core::ffi::c_ulonglong;
pub type size = core::ffi::c_ulonglong;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jerryMetaData {
    pub deviceTreeLen: u64_,
    pub ramStartAddr: *mut core::ffi::c_void,
    pub ramLen: u64_,
    pub kernelBinStartAddr: *mut core::ffi::c_void,
    pub kernelRodataStart: *mut core::ffi::c_void,
    pub kernelRodataEnd: *mut core::ffi::c_void,
    pub kernelTextStart: *mut core::ffi::c_void,
    pub kernelTextEnd: *mut core::ffi::c_void,
    pub kernelStackPointerStart: *mut core::ffi::c_void,
    pub kernelBssStart: *mut core::ffi::c_void,
    pub kernelBssEnd: *mut core::ffi::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of jerryMetaData"][::core::mem::size_of::<jerryMetaData>() - 88usize];
    ["Alignment of jerryMetaData"][::core::mem::align_of::<jerryMetaData>() - 8usize];
    ["Offset of field: jerryMetaData::deviceTreeLen"]
        [::core::mem::offset_of!(jerryMetaData, deviceTreeLen) - 0usize];
    ["Offset of field: jerryMetaData::ramStartAddr"]
        [::core::mem::offset_of!(jerryMetaData, ramStartAddr) - 8usize];
    ["Offset of field: jerryMetaData::ramLen"]
        [::core::mem::offset_of!(jerryMetaData, ramLen) - 16usize];
    ["Offset of field: jerryMetaData::kernelBinStartAddr"]
        [::core::mem::offset_of!(jerryMetaData, kernelBinStartAddr) - 24usize];
    ["Offset of field: jerryMetaData::kernelRodataStart"]
        [::core::mem::offset_of!(jerryMetaData, kernelRodataStart) - 32usize];
    ["Offset of field: jerryMetaData::kernelRodataEnd"]
        [::core::mem::offset_of!(jerryMetaData, kernelRodataEnd) - 40usize];
    ["Offset of field: jerryMetaData::kernelTextStart"]
        [::core::mem::offset_of!(jerryMetaData, kernelTextStart) - 48usize];
    ["Offset of field: jerryMetaData::kernelTextEnd"]
        [::core::mem::offset_of!(jerryMetaData, kernelTextEnd) - 56usize];
    ["Offset of field: jerryMetaData::kernelStackPointerStart"]
        [::core::mem::offset_of!(jerryMetaData, kernelStackPointerStart) - 64usize];
    ["Offset of field: jerryMetaData::kernelBssStart"]
        [::core::mem::offset_of!(jerryMetaData, kernelBssStart) - 72usize];
    ["Offset of field: jerryMetaData::kernelBssEnd"]
        [::core::mem::offset_of!(jerryMetaData, kernelBssEnd) - 80usize];
};
unsafe extern "C" {
    pub fn strlen(s: *const core::ffi::c_char) -> size;
}
unsafe extern "C" {
    pub fn strchr(s: *const core::ffi::c_char, c: core::ffi::c_int) -> *mut core::ffi::c_char;
}
unsafe extern "C" {
    pub fn strncmp(s1: *const core::ffi::c_char, s2: *const core::ffi::c_char, n: size) -> i32_;
}
unsafe extern "C" {
    pub fn strStartsWith(input: *const core::ffi::c_char, prefix: *const core::ffi::c_char)
        -> bool;
}
unsafe extern "C" {
    pub fn memset(s: *mut core::ffi::c_void, c: u8_, n: size) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn memchr(
        s: *const core::ffi::c_void,
        c: core::ffi::c_int,
        n: size,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn memcmp(s1: *const core::ffi::c_void, s2: *const core::ffi::c_void, n: size) -> i32_;
}
pub type fdt16_t = u16_;
pub type fdt32_t = u32_;
pub type fdt64_t = u64_;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fdt_header {
    pub magic: fdt32_t,
    pub totalsize: fdt32_t,
    pub off_dt_struct: fdt32_t,
    pub off_dt_strings: fdt32_t,
    pub off_mem_rsvmap: fdt32_t,
    pub version: fdt32_t,
    pub last_comp_version: fdt32_t,
    pub boot_cpuid_phys: fdt32_t,
    pub size_dt_strings: fdt32_t,
    pub size_dt_struct: fdt32_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of fdt_header"][::core::mem::size_of::<fdt_header>() - 40usize];
    ["Alignment of fdt_header"][::core::mem::align_of::<fdt_header>() - 4usize];
    ["Offset of field: fdt_header::magic"][::core::mem::offset_of!(fdt_header, magic) - 0usize];
    ["Offset of field: fdt_header::totalsize"]
        [::core::mem::offset_of!(fdt_header, totalsize) - 4usize];
    ["Offset of field: fdt_header::off_dt_struct"]
        [::core::mem::offset_of!(fdt_header, off_dt_struct) - 8usize];
    ["Offset of field: fdt_header::off_dt_strings"]
        [::core::mem::offset_of!(fdt_header, off_dt_strings) - 12usize];
    ["Offset of field: fdt_header::off_mem_rsvmap"]
        [::core::mem::offset_of!(fdt_header, off_mem_rsvmap) - 16usize];
    ["Offset of field: fdt_header::version"]
        [::core::mem::offset_of!(fdt_header, version) - 20usize];
    ["Offset of field: fdt_header::last_comp_version"]
        [::core::mem::offset_of!(fdt_header, last_comp_version) - 24usize];
    ["Offset of field: fdt_header::boot_cpuid_phys"]
        [::core::mem::offset_of!(fdt_header, boot_cpuid_phys) - 28usize];
    ["Offset of field: fdt_header::size_dt_strings"]
        [::core::mem::offset_of!(fdt_header, size_dt_strings) - 32usize];
    ["Offset of field: fdt_header::size_dt_struct"]
        [::core::mem::offset_of!(fdt_header, size_dt_struct) - 36usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fdt_reserve_entry {
    pub address: fdt64_t,
    pub size: fdt64_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of fdt_reserve_entry"][::core::mem::size_of::<fdt_reserve_entry>() - 16usize];
    ["Alignment of fdt_reserve_entry"][::core::mem::align_of::<fdt_reserve_entry>() - 8usize];
    ["Offset of field: fdt_reserve_entry::address"]
        [::core::mem::offset_of!(fdt_reserve_entry, address) - 0usize];
    ["Offset of field: fdt_reserve_entry::size"]
        [::core::mem::offset_of!(fdt_reserve_entry, size) - 8usize];
};
#[repr(C)]
#[derive(Debug)]
pub struct fdt_node_header {
    pub tag: fdt32_t,
    pub name: __IncompleteArrayField<core::ffi::c_char>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of fdt_node_header"][::core::mem::size_of::<fdt_node_header>() - 4usize];
    ["Alignment of fdt_node_header"][::core::mem::align_of::<fdt_node_header>() - 4usize];
    ["Offset of field: fdt_node_header::tag"]
        [::core::mem::offset_of!(fdt_node_header, tag) - 0usize];
    ["Offset of field: fdt_node_header::name"]
        [::core::mem::offset_of!(fdt_node_header, name) - 4usize];
};
#[repr(C)]
#[derive(Debug)]
pub struct fdt_property {
    pub tag: fdt32_t,
    pub len: fdt32_t,
    pub nameoff: fdt32_t,
    pub data: __IncompleteArrayField<core::ffi::c_char>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of fdt_property"][::core::mem::size_of::<fdt_property>() - 12usize];
    ["Alignment of fdt_property"][::core::mem::align_of::<fdt_property>() - 4usize];
    ["Offset of field: fdt_property::tag"][::core::mem::offset_of!(fdt_property, tag) - 0usize];
    ["Offset of field: fdt_property::len"][::core::mem::offset_of!(fdt_property, len) - 4usize];
    ["Offset of field: fdt_property::nameoff"]
        [::core::mem::offset_of!(fdt_property, nameoff) - 8usize];
    ["Offset of field: fdt_property::data"][::core::mem::offset_of!(fdt_property, data) - 12usize];
};
unsafe extern "C" {
    pub fn fdt_offset_ptr(
        fdt: *const core::ffi::c_void,
        offset: core::ffi::c_int,
        checklen: core::ffi::c_uint,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn fdt_next_tag(
        fdt: *const core::ffi::c_void,
        offset: core::ffi::c_int,
        nextoffset: *mut core::ffi::c_int,
    ) -> u32_;
}
unsafe extern "C" {
    pub fn fdt_next_node(
        fdt: *const core::ffi::c_void,
        offset: core::ffi::c_int,
        depth: *mut core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_first_subnode() - get offset of first direct subnode\n @fdt:\tFDT blob\n @offset:\tOffset of node to check\n\n Return: offset of first subnode, or -FDT_ERR_NOTFOUND if there is none"]
    pub fn fdt_first_subnode(
        fdt: *const core::ffi::c_void,
        offset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_next_subnode() - get offset of next direct subnode\n @fdt:\tFDT blob\n @offset:\tOffset of previous subnode\n\n After first calling fdt_first_subnode(), call this function repeatedly to\n get direct subnodes of a parent node.\n\n Return: offset of next subnode, or -FDT_ERR_NOTFOUND if there are no more\n         subnodes"]
    pub fn fdt_next_subnode(
        fdt: *const core::ffi::c_void,
        offset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_header_size - return the size of the tree's header\n @fdt: pointer to a flattened device tree\n\n Return: size of DTB header in bytes"]
    pub fn fdt_header_size(fdt: *const core::ffi::c_void) -> size;
}
